--- a/resources/surge.conf
+++ b/resources/surge.conf
@@ -13,15 +13,17 @@ DOMAIN-SUFFIX,swcdn.apple.com,DIRECT
 DOMAIN-SUFFIX,phobos.apple.com,DIRECT
 
 // Telegram
-IP-CIDR,91.108.56.0/22,Proxy,tcp-force,no-resolve
-IP-CIDR,91.108.4.0/22,Proxy,tcp-force,no-resolve
-IP-CIDR,109.239.140.0/24,Proxy,tcp-force,no-resolve
-IP-CIDR,149.154.160.0/20,Proxy,tcp-force,no-resolve
+IP-CIDR,91.108.56.0/22,Proxy,tcp-force
+IP-CIDR,91.108.4.0/22,Proxy,tcp-force
+IP-CIDR,109.239.140.0/24,Proxy,tcp-force
+IP-CIDR,149.154.160.0/20,Proxy,tcp-force
 
 DOMAIN-KEYWORD,google,Proxy,tcp-force
 DOMAIN-KEYWORD,facebook,Proxy,tcp-force
 DOMAIN-KEYWORD,youtube,Proxy,tcp-force
 DOMAIN-KEYWORD,twitter,Proxy,tcp-force
+DOMAIN-KEYWORD,instagram,Proxy,tcp-force
+DOMAIN-KEYWORD,gmail,Proxy,tcp-force
 DOMAIN-KEYWORD,blogspot,Proxy
 
 // DOMAIN-SUFFIX
