refer https://twitter.com/Blankwonder/status/650938670946451456

--- a/resources/surge.conf
+++ b/resources/surge.conf
@@ -25,6 +25,7 @@ DOMAIN-KEYWORD,twitter,Proxy,tcp-force
 DOMAIN-KEYWORD,instagram,Proxy,tcp-force
 DOMAIN-KEYWORD,gmail,Proxy,tcp-force
 DOMAIN-KEYWORD,blogspot,Proxy
+DOMAIN-SUFFIX,twimg.com,Proxy,tcp-force
 
 // DOMAIN-SUFFIX
 __RULE__
