for Apple iMessage, refer https://twitter.com/Blankwonder/status/651392092007075840

--- a/resources/surge.conf
+++ b/resources/surge.conf
@@ -27,6 +27,9 @@ DOMAIN-KEYWORD,gmail,Proxy,tcp-force
 DOMAIN-KEYWORD,blogspot,Proxy
 DOMAIN-SUFFIX,twimg.com,Proxy,tcp-force
 
+// Apple # https://twitter.com/Blankwonder/status/651392092007075840
+IP-CIDR,17.0.0.0/8,Proxy,no-resolve,tcp-force
+
 // DOMAIN-SUFFIX
 __RULE__
 
