--- a/resources/surge.conf
+++ b/resources/surge.conf
@@ -66,22 +66,19 @@ DOMAIN-SUFFIX,inmobi.com,REJECT
 DOMAIN-SUFFIX,smartadserver.com,REJECT
 
 // Telegram
-IP-CIDR,91.108.56.0/22,Proxy,tcp-force
-IP-CIDR,91.108.4.0/22,Proxy,tcp-force
-IP-CIDR,109.239.140.0/24,Proxy,tcp-force
-IP-CIDR,149.154.160.0/20,Proxy,tcp-force
+IP-CIDR,91.108.56.0/22,Proxy,no-resolve
+IP-CIDR,91.108.4.0/22,Proxy,no-resolve
+IP-CIDR,109.239.140.0/24,Proxy,no-resolve
+IP-CIDR,149.154.160.0/20,Proxy,no-resolve
 
-DOMAIN-KEYWORD,google,Proxy,tcp-force
-DOMAIN-KEYWORD,facebook,Proxy,tcp-force
-DOMAIN-KEYWORD,youtube,Proxy,tcp-force
-DOMAIN-KEYWORD,twitter,Proxy,tcp-force
-DOMAIN-KEYWORD,instagram,Proxy,tcp-force
-DOMAIN-KEYWORD,gmail,Proxy,tcp-force
+DOMAIN-KEYWORD,google,Proxy,force-remote-dns
+DOMAIN-KEYWORD,facebook,Proxy,force-remote-dns
+DOMAIN-KEYWORD,youtube,Proxy,force-remote-dns
+DOMAIN-KEYWORD,twitter,Proxy,force-remote-dns
+DOMAIN-KEYWORD,instagram,Proxy,force-remote-dns
+DOMAIN-KEYWORD,gmail,Proxy,force-remote-dns
 DOMAIN-KEYWORD,blogspot,Proxy
-DOMAIN-SUFFIX,twimg.com,Proxy,tcp-force
-
-// Apple # https://twitter.com/Blankwonder/status/651392092007075840
-IP-CIDR,17.0.0.0/8,Proxy,no-resolve,tcp-force
+DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
 
 // DOMAIN-SUFFIX
 __RULE__
@@ -92,5 +89,4 @@ IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 
-GEOIP,CN,DIRECT
 FINAL,DIRECT
